# cad_agents

./: .gitignore  AGENTS.md  GOAL.md  LICENSE  README.md  README_JA.md  SPEC.md  TASKS.md  agent.md  cad_agent_cli.py  prompt.md  pyproject.toml  run_cad_agent.sh
.kilo/: agent-manager.json
cad_agent/: __init__.py  api_server.py  assembly_checks.py  bom.py  job_queue.py  material_catalog.py  phase2_pilot.py  platform_poc.py  project_service.py  schema_gate.py  security_policy.py  transforms.py  workflow.py
deliverables/: README.md  README_JA.md  current_delivery.json
docs/: ASSEMBLY_DSL_CONTRACT.md  CAD_RUNTIME_CONTRACT.md  MECHANISM_DSL_OPERATIONS.md  MECHANISM_DSL_V1.md  MOTION_VALIDATION_CONTRACT.md  MVP_SCOPE.md  ORCHESTRATOR_WORKFLOW.md  VALIDATION_CONTRACT.md  api_contracts_ja.md  architecture_ja.md  cad_agent_detailed_design.md  cad_agent_implementation_plan.md  codex_operating_alignment_ja.md  context_efficiency_playbook_ja.md  design_gaps_ja.md  design_rule_register_ja.md  fifty_point_feasibility_sweep_ja.md  front_loaded_design_framework_ja.md  kinetic_object_value_framework_ja.md  local_first_cad_backend_strategy_ja.md  mechanical_design_workflow_ja.md  mechanism_claim_taxonomy_ja.md  operating_packet_checklist_ja.md  operations_ja.md  platform_design_ja.md  platform_goal_ja.md  platform_implementation_ja.md  pre_cad_design_readiness_checklist_ja.md  prompt_execution_plan.md  research_review_ja.md  skill_governance_ja.md  skill_spec_audit_checklist_ja.md  text_to_cad_review_workflow_ja.md  three_layer_integrity_audit_ja.md  v12_v15_pdca_review_ja.md  (+13 more)
(+572 files in other folders)
