[project]
name = "cad-agent-framework"
version = "0.1.0"
description = "Local-first workflow framework for agentic CAD modeling"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "build123d>=0.10.0",
    "trimesh>=4.12.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
]

[project.optional-dependencies]
dev = [
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cad_agent"]
package-dir = {cad_agent = "."}